added stop in notebook

--- a/Challenge_1/SSD_Face_Detection_SageMaker_Endpoint.ipynb
+++ b/Challenge_1/SSD_Face_Detection_SageMaker_Endpoint.ipynb
@@ -381,6 +381,10 @@
    "source": [
     "We've created a custom transform_fn, which provides the logic that SageMaker uses to handle requests. In this instance, we're going to not only run inference on our inputs, but we're going to take the face crops detected (if any) and save them to an S3 bucket <tt>\"your-bucket\"</tt>. Then the outputs are returned.\n",
     "\n",
+    "**STOP**: please return to the lab instructions before continuing.\n",
+    "\n",
+    "By now, you should have followed the instructions to edit the inference script to include your actual bucket name, instead of the placeholder. We'll now continue to deploy.\n",
+    "\n",
     "As before, the actual deployment will take only one click; SageMaker takes care of launching the instances and the server itself."
    ]
   },
