added stop in notebook

--- a/Challenge_1/SSD_Face_Detection_SageMaker_Endpoint.ipynb
+++ b/Challenge_1/SSD_Face_Detection_SageMaker_Endpoint.ipynb
@@ -383,7 +383,25 @@
     "\n",
     "**STOP**: please return to the lab instructions before continuing.\n",
     "\n",
-    "By now, you should have followed the instructions to edit the inference script to include your actual bucket name, instead of the placeholder. We'll now continue to deploy.\n",
+    "By now, you should have followed the instructions to edit the inference script to include your actual bucket name, instead of the placeholder. Let's check:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cat mxnet_ssd_face_detection_rekognition.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You should now see your bucket instead of the placeholder.\n",
+    "\n",
+    "We'll now continue to deploy.\n",
     "\n",
     "As before, the actual deployment will take only one click; SageMaker takes care of launching the instances and the server itself."
    ]
