added stop in notebook

--- a/Challenge_1/SSD_Face_Detection_SageMaker_Endpoint.ipynb
+++ b/Challenge_1/SSD_Face_Detection_SageMaker_Endpoint.ipynb
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
       "###############################\r\n",
       "\r\n",
       "def push_to_s3(img, index):\r\n",
-      "    bucket_name = \"<your-bucket>\"\r\n",
+      "    bucket_name = \"your-bucket\"\r\n",
       "\r\n",
       "    timestamp = int(time.time())\r\n",
       "    now = datetime.datetime.now()\r\n",
