added comments to nb

--- a/Challenge_1/SSD_Face_Detection_SageMaker_Endpoint.ipynb
+++ b/Challenge_1/SSD_Face_Detection_SageMaker_Endpoint.ipynb
@@ -225,7 +225,7 @@
     "                                  })\n",
     "```                              \n",
     "\n",
-    "With a single click, we can launch a training job, distributed or otherwise, and SageMaker completely handles the resource management to do so. \n",
+    "With a single click, we can launch a training job, distributed or otherwise, and SageMaker completely handles the resource management to do so. (**Note**: We have chosen a p3 instance here because GPU compute is typically used for training neural networks. However, comparable speeds can be accomplished with the c5 instance type).\n",
     "\n",
     "When launching a training job, SageMaker:\n",
     "* Creates an S3 bucket to store training script <tt>mxnet_ssd_face_detection.py</tt>\n",
@@ -403,7 +403,9 @@
     "\n",
     "We'll now continue to deploy.\n",
     "\n",
-    "As before, the actual deployment will take only one click; SageMaker takes care of launching the instances and the server itself."
+    "As before, the actual deployment will take only one click; SageMaker takes care of launching the instances and the server itself.\n",
+    "\n",
+    "**Note**: When deploying an endpoint, SageMaker must spin up an instance (or instances). This may take some time; once finished, the dash marks below will end in an exclamation point."
    ]
   },
   {
