--- a/Prep_Challenge/SSD_Face_Detection_SageMaker_Endpoint.ipynb
+++ b/Prep_Challenge/SSD_Face_Detection_SageMaker_Endpoint.ipynb
@@ -49,9 +49,9 @@
     "\n",
     "### Data Exploration\n",
     "\n",
-    "Our model is tasked with Face Detection. Let's explore the data provided to us to understand how such a model might work.\n",
+    "Our model is tasked with Face Detection. Training a deep learning model to accomplish any task requires inputs (or observations), and outputs (or labels). Let's look at what these are.\n",
     "\n",
-    "The data set the model will be trained on is a set of images:"
+    "The data set the model will be trained on is a set of images as inputs:"
    ]
   },
   {
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With a corresponding set of numbers:"
+    "With a corresponding set of numbers as outputs:"
    ]
   },
   {
@@ -116,7 +116,9 @@
    "source": [
     "The numbers here describe bounding boxes for the four faces in the image.\n",
     "\n",
-    "Each row represents: <tt>left top width height</tt>. Let's put these together with the input:"
+    "Each row represents: <tt>left top width height</tt>. \n",
+    "\n",
+    "Let's visualize what these bounding box coordinates look like:"
    ]
   },
   {
